--- a/components/layout/columns/columns.bookshop.yml
+++ b/components/layout/columns/columns.bookshop.yml
@@ -4,7 +4,7 @@ spec:
     - content_blocks
   label: Columns
   description: Layout content in columns.
-  icon: "view_column_2"
+  icon: view_column
   tags: []
 
 # Defines the structure of this component, as well as the default values
