--- a/components/richtext/richtext.bookshop.yml
+++ b/components/richtext/richtext.bookshop.yml
@@ -10,6 +10,34 @@ spec:
 # Defines the structure of this component, as well as the default values
 blueprint:
   markdown:
+    options:
+      blockquote: true
+      bold: true
+      format: p h1 h2 h3 h4 h5 h6 pre address div
+      italic: true
+      strike: true
+      subscript: true
+      superscript: true
+      underline: true
+      bulletedlist: true
+      indent: true
+      numberedlist: true
+      outdent: true
+      code: true
+      embed: true
+      horizontalrule: true
+      image: true
+      table: true
+      undo: true
+      redo: true
+      removeformat: true
+      copyformatting: true
+      styles: src/styles/editor.css
+      left: align-left
+      center: align-center
+      right: align-right
+      justify: align-justify
+      image_size_attributes: true
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
