--- a/components/richtext/richtext.bookshop.yml
+++ b/components/richtext/richtext.bookshop.yml
@@ -10,6 +10,9 @@ spec:
 # Defines the structure of this component, as well as the default values
 blueprint:
   markdown:
+
+_inputs:
+  markdown:
     options:
       blockquote: true
       bold: true
