--- a/components/richtext/richtext.bookshop.yml
+++ b/components/richtext/richtext.bookshop.yml
@@ -2,17 +2,17 @@
 spec:
   structures:
     - content_blocks
-  label: Markdown
+  label: Content
   description: Rich text element.
   icon: edit_note
   tags: []
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  markdown:
+  content:
 
 _inputs:
-  markdown:
+  content:
     options:
       blockquote: true
       bold: true
