--- a/components/form/inputs/email/email.bookshop.yml
+++ b/components/form/inputs/email/email.bookshop.yml
@@ -1,17 +1,18 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
-    - content_blocks
-  label: Form
-  description: Customisable Web Form
-  icon: contact_support
+    - form_blocks
+  label: Email Input
+  description: Email input field
+  icon: email
   tags: ["form", "input"]
 
 # Defines the structure of this component, as well as the default values
 blueprint:
   name: ""
-  action: ""
-  form_blocks: []
+  label: ""
+  placeholder: ""
+  required:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
@@ -20,8 +21,12 @@ _inputs:
   name:
     type: text
     comment: >-
-      Unique form name, should be different than all field names.
+      Unique name submitted with the value of the field.
       Must start with a letter, numbers and the symbols "-","_",":","." are allowed.
-  action:
-    type: url
-    comment: The URL the form will be submitted to.
+  label:
+    type: text
+  placeholder:
+    type: text
+  required:
+    type: checkbox
+    comment: Require this field to be filled to submit.
