--- a/components/layout/slider/slider.bookshop.yml
+++ b/components/layout/slider/slider.bookshop.yml
@@ -25,6 +25,34 @@ blueprint:
 _inputs:
   content:
     type: markdown
+    options:
+      blockquote: true
+      bold: true
+      format: p h1 h2 h3 h4 h5 h6 pre address div
+      italic: true
+      strike: true
+      subscript: true
+      superscript: true
+      underline: true
+      bulletedlist: true
+      indent: true
+      numberedlist: true
+      outdent: true
+      code: true
+      embed: true
+      horizontalrule: true
+      image: true
+      table: true
+      undo: true
+      redo: true
+      removeformat: true
+      copyformatting: true
+      styles: src/styles/editor.css
+      left: align-left
+      center: align-center
+      right: align-right
+      justify: align-justify
+      image_size_attributes: true
   height:
     type: number
     comment: Slider height, in percentage of browser window height (vh).
