--- a/components/layout/slider/slider.bookshop.yml
+++ b/components/layout/slider/slider.bookshop.yml
@@ -12,10 +12,12 @@ blueprint:
       background_color:
       background_image:
   height: 50
+  gap: 0
   autoplay: 0
   perView: 1
   focusAtCenter: true
   focusAt: 0
+  bound: false
   showBullets: true
   showArrows: true
   indent: false
@@ -59,6 +61,12 @@ _inputs:
     options:
       min: 0
       max: 100
+  gap:
+    type: number
+    comment: Gap betwen slides, in pixels (px).
+    options:
+      min: 0
+      max: 100
   autoplay:
     type: number
     comment: Time between automatically switching slides in seconds. (0 to disable autoplay.)
@@ -82,6 +90,12 @@ _inputs:
     options:
       min: 0
       step: 1
+  bound:
+    label: Bound
+    comment: Avoid showing empty space after last card in slider mode, useful when slides per view is >1.
+    hidden: focusAtCenter
+  indent:
+    type: switch
   transition:
     type: select
     comment: >
