--- a/components/layout/slider/slider.bookshop.yml
+++ b/components/layout/slider/slider.bookshop.yml
@@ -23,6 +23,7 @@ blueprint:
   indent: false
   transition: Slider
   animationDuration: 0.4
+  hoverpause: false
   style:
 
 _inputs:
@@ -115,6 +116,9 @@ _inputs:
       min: 0
       step: 0.1
       max: 10
+  hoverpause:
+    type: switch
+    label: Pause autoplay on hover
   style:
     type: multiselect
     options:
