--- a/components/layout/slider/slider.bookshop.yml
+++ b/components/layout/slider/slider.bookshop.yml
@@ -8,9 +8,6 @@ spec:
 
 blueprint:
   slides:
-    - content:
-      background_color:
-      background_image:
   height: 50
   gap: 0
   autoplay: 0
@@ -27,36 +24,9 @@ blueprint:
   style:
 
 _inputs:
-  content:
-    type: markdown
-    options:
-      blockquote: true
-      bold: true
-      format: p h1 h2 h3 h4 h5 h6 pre address div
-      italic: true
-      strike: true
-      subscript: true
-      superscript: true
-      underline: true
-      bulletedlist: true
-      indent: true
-      numberedlist: true
-      outdent: true
-      code: true
-      embed: true
-      horizontalrule: true
-      image: true
-      table: true
-      undo: true
-      redo: true
-      removeformat: true
-      copyformatting: true
-      styles: src/styles/editor.css
-      left: align-left
-      center: align-center
-      right: align-right
-      justify: align-justify
-      image_size_attributes: true
+  slides:
+    type: array
+    structures: _structures.slides
   height:
     type: number
     comment: Slider height, in percentage of browser window height (vh).
