--- a/components/layout/slider/slider.bookshop.yml
+++ b/components/layout/slider/slider.bookshop.yml
@@ -8,6 +8,9 @@ spec:
 
 blueprint:
   slides:
+    - content:
+      background_color:
+      background_image:
   height: 50
   gap: 0
   autoplay: 0
@@ -24,9 +27,36 @@ blueprint:
   style:
 
 _inputs:
-  slides:
-    type: array
-    structures: _structures.slides
+  content:
+    type: markdown
+    options:
+      blockquote: true
+      bold: true
+      format: p h1 h2 h3 h4 h5 h6 pre address div
+      italic: true
+      strike: true
+      subscript: true
+      superscript: true
+      underline: true
+      bulletedlist: true
+      indent: true
+      numberedlist: true
+      outdent: true
+      code: true
+      embed: true
+      horizontalrule: true
+      image: true
+      table: true
+      undo: true
+      redo: true
+      removeformat: true
+      copyformatting: true
+      styles: src/styles/editor.css
+      left: align-left
+      center: align-center
+      right: align-right
+      justify: align-justify
+      image_size_attributes: true
   height:
     type: number
     comment: Slider height, in percentage of browser window height (vh).
@@ -93,20 +123,3 @@ _inputs:
     type: multiselect
     options:
       allow_create: true
-
-_structures:
-  slides:
-    values:
-      - label: Image
-        icon: image
-        value:
-          image:
-          caption:
-          image_fit:
-            type: select
-            values:
-              - contain
-              - cover
-      - label: Content Block
-        options:
-          structures: content_blocks
