--- a/components/layout/columns/columns.bookshop.yml
+++ b/components/layout/columns/columns.bookshop.yml
@@ -10,6 +10,12 @@ spec:
 # Defines the structure of this component, as well as the default values
 blueprint:
   content_blocks: [bookshop:structure:content_blocks]
+  collapse: true
+
+_inputs:
+  collapse:
+    type: checkbox
+    comment: Wrap columns at small screen sizes
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
