--- a/components/form/form.bookshop.yml
+++ b/components/form/form.bookshop.yml
@@ -12,6 +12,7 @@ blueprint:
   name: ""
   action: ""
   form_blocks: []
+  background_color:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
