--- a/components/richtext/richtext.bookshop.yml
+++ b/components/richtext/richtext.bookshop.yml
@@ -10,6 +10,7 @@ spec:
 # Defines the structure of this component, as well as the default values
 blueprint:
   content:
+  background_color:
   style:
 
 _inputs:
