Column layout system

--- a/components/layout/columns/columns.bookshop.yml
+++ b/components/layout/columns/columns.bookshop.yml
@@ -11,11 +11,20 @@ spec:
 blueprint:
   content_blocks: [bookshop:structure:content_blocks]
   collapse: true
+  layout: [0]
 
 _inputs:
   collapse:
     type: checkbox
-    comment: Wrap columns at small screen sizes
+    comment: Restrict to one column at small screen sizes
+  layout:
+    type: array
+    comment: Set a fixed number of columns per row (0 is no limit, rows after a zero are ignored).
+  layout[*]:
+    type: number
+    options:
+      min: 0
+      step: 1
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
