--- a/components/layout/slider/slider.bookshop.yml
+++ b/components/layout/slider/slider.bookshop.yml
@@ -25,7 +25,7 @@ blueprint:
   indent: false
   transition: Slider
   animationDuration: 0.4
-  style:
+  class:
 
 _inputs:
   slides:
@@ -127,7 +127,8 @@ _inputs:
   hoverpause:
     type: switch
     label: Pause autoplay on hover
-  style:
+  class:
+    label: Style
     type: multiselect
     options:
       allow_create: true
