--- a/components/richtext/richtext.bookshop.yml
+++ b/components/richtext/richtext.bookshop.yml
@@ -11,7 +11,7 @@ spec:
 blueprint:
   content:
   background_color:
-  style:
+  classes:
 
 _inputs:
   content:
@@ -44,7 +44,8 @@ _inputs:
       right: align-right
       justify: align-justify
       image_size_attributes: true
-  style:
+  classes:
+    label: Style
     type: multiselect
     options:
       allow_create: true
