--- a/src/components/map/map.bookshop.yml
+++ b/src/components/map/map.bookshop.yml
@@ -12,7 +12,9 @@ blueprint:
   lat: -32.0390536
   lng: 115.631223
   zoom: 12
-  height:
+  mapType: roadmap
+  marker: false
+  height: 40
   indent: true
   style:
 
@@ -32,6 +34,16 @@ _inputs:
       min: 0
       max: 20
       step: 0.25
+  mapType:
+    type: select
+    options:
+      values:
+        - roadmap
+        - satellite
+        - hybrid
+        - terrain
+  marker:
+    type: switch
   height:
     type: number
     comment: Map height, in percentage of browser window height (vh).
