--- a/src/components/layout/columns/columns.bookshop.yml
+++ b/src/components/layout/columns/columns.bookshop.yml
@@ -12,6 +12,7 @@ blueprint:
   content_blocks: [bookshop:structure:content_blocks]
   collapse: true
   layout: [1]
+  classes:
 
 _inputs:
   collapse:
@@ -26,6 +27,17 @@ _inputs:
       min: 1
       step: 1
       max: 6
+  classes:
+  label: Style
+  type: multiselect
+  options:
+    allow_create: true
+    values:
+      - no-indent
+      - no-indent-top
+      - no-indent-bottom
+      - no-indent-left
+      - no-indent-right
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
