--- a/src/components/image/image.bookshop.yml
+++ b/src/components/image/image.bookshop.yml
@@ -15,6 +15,7 @@ blueprint:
   height: 50
   indent: true
   lightbox: true
+  classes:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
