Add link option for images in gallery

--- a/src/components/gallery/gallery.bookshop.yml
+++ b/src/components/gallery/gallery.bookshop.yml
@@ -21,6 +21,7 @@ blueprint:
     - image:
       title:
       description:
+      link:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
