--- a/src/components/gallery/gallery.bookshop.yml
+++ b/src/components/gallery/gallery.bookshop.yml
@@ -14,6 +14,7 @@ blueprint:
   gap: true
   aspect: 1
   indent: true
+  linkgallery: false
   lightbox: true
   placeholder: true
   classes:
@@ -55,3 +56,8 @@ _inputs:
     type: markdown
   lightbox:
     type: checkbox
+    hidden: linkgallery
+  linkgallery:
+    type: checkbox
+    label: Link Gallery
+    comment: Clicking gallery items redirects the user to their respective links
