--- a/src/components/map/map.bookshop.yml
+++ b/src/components/map/map.bookshop.yml
@@ -26,7 +26,7 @@ _inputs:
     comment: Place name, address, or plus code. Displays a marker if set.
   lat:
     label: Latitude
-    comment: Required if location is not specified. Latitude and Longitude can be copied by right clicking a position on the map in Google Maps.
+    comment: Sets the map center, optional if location is set. Latitude and Longitude can be copied by right clicking a position on the map in Google Maps.
     type: number
   lng:
     label: Longitude
