Fix navigation erroring in live editor

--- a/src/components/navigation/navigation.bookshop.yml
+++ b/src/components/navigation/navigation.bookshop.yml
@@ -14,9 +14,9 @@ blueprint:
 
 _inputs:
   filter:
-    type: string
+    type: text
   collection:
-    type: string
+    type: text
   maxDepth:
     type: number
 
