Lower gallery image quality, add extra columns for padding in columns component

--- a/src/components/calendar/calendar.bookshop.yml
+++ b/src/components/calendar/calendar.bookshop.yml
@@ -19,10 +19,10 @@ _inputs:
     type: email
     label: Google Calendar ID
     comment: Look in the calendar settings to find this value, it will be formatted like 'abcd1234@group.calendar.google.com'
-  url:
-    type: url
-    label: iCal URL
-    comment:
+  # url:
+  #   type: url
+  #   label: iCal URL
+  #   comment:
 
 _structures:
   calendarEvents:
