--- a/src/components/quicklink/quicklink.bookshop.yml
+++ b/src/components/quicklink/quicklink.bookshop.yml
@@ -4,7 +4,7 @@ spec:
     - secondary_navigation
   label: Quicklink
   description: Add a link to the secondary navigation
-  icon: add-link
+  icon: add_link
   tags: []
 
 # Defines the structure of this component, as well as the default values
