Improve columns preview

--- a/src/components/layout/columns/columns.bookshop.yml
+++ b/src/components/layout/columns/columns.bookshop.yml
@@ -6,6 +6,16 @@ spec:
   description: Layout content in columns.
   icon: view_column
   tags: []
+  preview:
+    subtext:
+      - key: content_blocks[*].label
+      - key: content_blocks[*]._bookshop_name
+    image:
+      - key: background_image
+    metadata:
+      - text:
+          - template: classes
+        icon: tag
 
 # Defines the structure of this component, as well as the default values
 blueprint:
