--- a/src/components/gallery/gallery.bookshop.yml
+++ b/src/components/gallery/gallery.bookshop.yml
@@ -6,6 +6,13 @@ spec:
   description: Display images in a gallery.
   icon: collections
   tags: ["image", "collection"]
+  preview:
+    image:
+      - key: image[0].image
+    metadata:
+      - text:
+          - key: classes
+        icon: tag
 
 # Defines the structure of this component, as well as the default values
 blueprint:
