--- a/src/components/layout/columns/columns.bookshop.yml
+++ b/src/components/layout/columns/columns.bookshop.yml
@@ -8,13 +8,12 @@ spec:
   tags: []
   preview:
     subtext:
-      - key: content_blocks[*].label
       - key: content_blocks[*]._bookshop_name
     image:
       - key: background_image
     metadata:
       - text:
-          - template: classes
+          - key: classes
         icon: tag
 
 # Defines the structure of this component, as well as the default values
