--- a/src/components/player/player.bookshop.yml
+++ b/src/components/player/player.bookshop.yml
@@ -10,6 +10,10 @@ spec:
     text: Video Player
     subtext:
       - key: src
+    metadata:
+      - text:
+          - key: classes
+        icon: tag
 
 # Defines the structure of this component, as well as the default values
 blueprint:
