--- a/src/components/richtext/richtext.bookshop.yml
+++ b/src/components/richtext/richtext.bookshop.yml
@@ -9,6 +9,10 @@ spec:
   preview:
     image:
       - key: background_image
+    metadata:
+      - text:
+          - key: classes
+        icon: tag
 
 # Defines the structure of this component, as well as the default values
 blueprint:
