--- a/src/components/image/image.bookshop.yml
+++ b/src/components/image/image.bookshop.yml
@@ -28,7 +28,7 @@ blueprint:
   height: 50
   indent: true
   lightbox: true
-  classes:
+  section:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
